1999-05-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (orac_read): Create readline interface on request
	rather than at start.

	* TempFile.pm (Initialise): Remove dots from tempnames.

1999-05-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UFTI.pm: Fix readhdr so that it doesnt use header.

1999-05-12  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_setup_display): Check for $ENV{DISPLAY} 

	* Calib.pm: Reorganize documentation.

1999-05-11  Tim Jenness  <timj@jach.hawaii.edu>

	* TempFile.pm: Created.

	* Basic.pm: use ORAC::TempFile and extend documentation on
	orac_execute_recipe 

	* Index.pm: Tidy documentation and constructor

	* Frame.pm (new): Allow base class to be used by sub-classes

	* Frame/JCMT.pm (new): Use the generic base class constructor

1999-05-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/MichTemp.pm: Major documentation update. Put all methods into
	alphabetical order.

	* Frame/UKIRT.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.

	* Frame/JCMT.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.

1999-05-09  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Frame.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.  

	* Group.pm: Major update of documentation. Put all methods into 
	alphabetical order. Remove header/uheader/members_ref and
	allmembers_ref and replace with hdr/uhdr/members/allmembers.

1999-05-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm (newdev): No longer use $$ for GWM window name 

1999-05-06  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: Add COMP= to all displays

1999-04-29  Tim Jenness  <timj@jach.hawaii.edu>

	* Loop.pm (orac_sleep): Tidy up so that it simply uses DoOneEvent

1999-04-28  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_add_to_recipe): Fix ORAC_DEBUG lines so that they 