@@ -1,3 +1,13 @@
+1999-06-01  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/KAPVIEW.pm (config_regions): Configure regions once and
+	then select them as required.
+
+1999-05-30  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display.pm (display_data): Allow for the display definition not
+	to be read if using supplied values.
+
 1999-05-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Print.pm (orac_read): Create readline interface on request
